# py_dbmigration

./: .env  .gitignore  .travis.yml  AUTHORS.rst  Build.Dockerfile  Build.Dockerfile_base  Build.Dockerfile_base7  Build.TestExe  BuildTarget.sh  BuildTargetTest.sh  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  __init__.py  benchmark.sql  build_travis_docker.sh  centos6.repo  cloud9.sh  create_virtualenv.sh  data_load.py  data_load.spec  docker-compose.sh  docker-compose.yml  extract_db_tables_to_sqitch.py  increase_ec2_hd.sh  init.sql  meta_source.sh  move_schema_table.yaml  publish.yaml  publish_project.py  python_setup_36.txt  python_setup_38.txt  requirements.txt  setup.cfg  setup.py  test.py  unit_test.py
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml  pgadmin4.json  welcome.txt
bash/: chmod_files.sh  tar_venv.sh
custom_logic/: abort_if_duplicate.py  abort_if_obselete.py  append_file_id.py  append_file_id_w_header.py  client_copy.py  client_copy2.py  count_file_linux_wc.py  extract_compressed_file.py  generate_checksum.py  log_file_size.py  pandas_import.py  purge_temp_file.py  read_from_s3.py  row_count_excel.py  sed_modify_file.py  upsert_table_from_stg.py  wyman.py
data_file_mgnt/: README.md  __init__.py  data_files.py  utils.py
db_logging/: __init__.py  db_logging.py  logger.py
db_table/: __init__.py  db_table.py  db_table_def.py  db_table_func.py  meta_source_file.py
db_utils/: __init__.py  dbconn.py  utils.py
docs/: Makefile  conf.py  index.rst
hooks/: hooks-py_dbmigration.custom_logic.py
migrate_utils/: __init__.py  migrate_utils.py  static_func.py
misc_utils/: __init__.py  (+1 more)
(+141 files in other folders)
