[bumpversion]
current_version = 0.2.88
commit = True
tag = True

[metadata]
name = py_dbmigration
description = Utility to load datafiles into postgres and potentially other databases
author = Hung Nguyen
author_email = hung135@hotmail.com
license = mit
url = https://pyscaffold.org/
long_description = file: README.rst
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = py_dbutils; openpyxl; inflection; prettytable; xlrd
python_requires = >=3.6.8

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	data_load = py_dbmigration.data_load:main
	extract_schema_to_sqitch = py_dbmigration.extract_db_tables_to_sqitch:main
	meta_source = py_dbmigration.meta_source:main
	sql_runner = py_dbmigration.sql_runner:main
	load_csv = py_dbmigration.load_csv:main
	load_excel = py_dbmigration.load_excel:main

[test]
extras = True

[tool:pytest]
addopts = 
	--cov py_dbmigration --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 3.1
package = py_dbmigration
